slogan, texts and header menu changed

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 
       <div class="wrapper">
         <a href="/" title="Home" rel="home"><img src="img/logo-mini.png" alt="BrazilJS Logo" /></a>
-        <p>moving &amp; uniting</p>
+        <p>foundation</p>
 
         <ul>
-          <li>/ <a href="team.html" title="Team BrazilJS Fundation">Team</a></li>
+          <li><a href="team.html" title="Team BrazilJS Fundation">Team</a></li>
           <li>/ <a href="manifesto.html" title="Manifesto BrazilJS Fundation">Manifesto</a></li>
-          <li>/ <a href="contact.html" title="Contact US BrazilJS Fundation">Contact US</a></li>
+          <li>/ <a href="contact.html" title="Contact BrazilJS Fundation">Contact</a></li>
         </ul>
 
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.org/">Tweet</a>
@@ -63,7 +63,7 @@
 
       <div class="wrapper">
         <img class="logo" src="img/logo.png" alt="BrazilJS Logo">
-        <h1>moving &amp; uniting</h1>
+        <h1>united we move</h1>
         <p>We not only bring content to people, we want to unite them. <a href="/manifesto.html">Read our manifesto</a></p>
       </div>
 
@@ -79,7 +79,7 @@
 
         <img src="img/img-getinvolved.png" alt="Brazilian Heart">
         <h3>Join us</h3>
-        <p>We are starting a movement to unify the JavaScript community of Brazil, front-end or back-end. Stay tuned for the news we are preparing. <a href="https://groups.google.com/forum/?fromgroups#!forum/braziljs-group">Join the discussion group</a>.</p>
+        <p>We are starting a movement to unify the JavaScript community in Brazil, both front-end and back-end. Stay tuned for the cool things we are preparing. <a href="https://groups.google.com/forum/?fromgroups#!forum/braziljs-group">Join the discussion group</a>.</p>
 
         <form id="get-involved-form">
           <input id="get-involved-form-email" name="email" type="text" placeholder="Enter your email here">
@@ -101,20 +101,20 @@
 
       <img src="img/logo-pb.png" alt="BrazilJS Logo">
 
-      <p class="about">BrazilJS Foundation is a non-profit foundation with the mission to Moving and Uniting the JavaScript community in Brazil.</p>
+      <p class="about">BrazilJS Foundation is a non-profit foundation with the mission to unite and move the JavaScript community in Brazil.</p>
 
       <ul class="nav">
         <li><a href="team.html" title="Team">Team</a></li>
         <li><a href="manifesto.html" title="Manifesto">Manifesto</a></li>
-        <li><a href="contact.html" title="Contact us">Contact us</a></li>
+        <li><a href="contact.html" title="Contact">Contact</a></li>
       </ul>
 
       <ul class="social">
-        <li><a href="https://twitter.com/braziljs">Twitter</a></li>
-        <li><a href="http://www.facebook.com/braziljs">Facebook</a></li>
+        <li><a href="https://twitter.com/braziljs" title="Twitter">Twitter</a></li>
+        <li><a href="http://www.facebook.com/braziljs" title="Facebook">Facebook</a></li>
       </ul>
 
-      <p class="license">© 2012. Content available under a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons</a> license.</p>
+      <p class="license">© 2012. Content available under a <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons">Creative Commons</a> license.</p>
 
     </div>
 
