--- a/src/documents/projetos/power-polygon.html
+++ b/src/documents/projetos/power-polygon.html
@@ -7,7 +7,7 @@ image: "http://braziljs.org/img/projects/power-polygon.jpg"
 ---
 
 <ul>
-  <li><a href="http://github.com/braziljs/PowerPolygon">Faça um fork do projeto</a></li>
+  <li><a href="https://github.com/braziljs/power-polygon">Faça um fork do projeto</a></li>
   <li><a href="https://groups.google.com/forum/?fromgroups#!forum/braziljs-foundation">Use-o, e envie seu feedback para lista de e-mail</a></li>
   <li><a href="https://github.com/braziljs/power-polygon#get-involved">Ajude a melhorá-lo</a></li>
 </ul>
