Add the right link for jstherightway,

--- a/src/documents/projetos/js-the-right-way.html
+++ b/src/documents/projetos/js-the-right-way.html
@@ -1,7 +1,7 @@
 ---
 title: "JavaScript The Right Way"
 description: "Um guia com 'a forma certa de escrever JavaScript'. Abordando as melhores práticas, dicas para desenvolvimento, padrões, performance, entre outras coisas."
-site: "http://jstherightway.com"
+site: "http://jstherightway.org"
 github: "braziljs/js-the-right-way"
 image: "http://braziljs.org/img/projects/js-the-right-way.jpg"
 ---
