Add the right link for confboilerplate.

--- a/src/documents/projetos/conf-boilerplate.html
+++ b/src/documents/projetos/conf-boilerplate.html
@@ -1,7 +1,7 @@
 ---
 title: "Conf Boilerplate"
 description: "Um pontapé inicial para acelerar o processo de desenvolvimento de sites para conferências."
-site: "http://confboilerplate.com"
+site: "http://braziljs.github.io/conf-boilerplate/"
 github: "braziljs/conf-boilerplate"
 image: "http://braziljs.org/img/projects/conf-boilerplate.jpg"
 ---
