--- a/src/documents/projetos/femug.html
+++ b/src/documents/projetos/femug.html
@@ -7,5 +7,6 @@ image: "http://braziljs.org/img/projects/femug.jpg"
 ---
 
 <ul>
+  <li><a href="https://github.com/braziljs/femug#como-criar-um-femug">Contribua criando novos encontros</a></li>
   <li><a href="https://github.com/braziljs/femug">Contribua com melhorias no código-fonte</a></li>
 </ul>
