--- a/src/documents/contato/index.html
+++ b/src/documents/contato/index.html
@@ -3,22 +3,25 @@ layout: default
 ---
 
 <article class="wrapper contact single-page">
-  <div id="wufoo-znx8cjl1naeeqh"></div>
-  <div id="wuf-adv"></div>
-  <script type="text/javascript">var znx8cjl1naeeqh;(function(d, t) {
-  var s = d.createElement(t), options = {
-  'userName':'braziljs',
-  'formHash':'znx8cjl1naeeqh',
-  'autoResize':true,
-  'height':'497',
-  'async':true,
-  'host':'wufoo.com',
-  'header':'show',
-  'ssl':true};
-  s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
-  s.onload = s.onreadystatechange = function() {
-  var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-  try { znx8cjl1naeeqh = new WufooForm();znx8cjl1naeeqh.initialize(options);znx8cjl1naeeqh.display(); } catch (e) {}};
-  var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
-  })(document, 'script');</script>
+<div id="wufoo-zxsyc5z1bwt29f">
+Fill out my <a href="https://jaydson.wufoo.com/forms/zxsyc5z1bwt29f">online form</a>.
+</div>
+<div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">The easy to use <a href="http://www.wufoo.com/form-builder/">Wufoo form builder</a> helps you make forms easy, fast, and fun.</div>
+<script type="text/javascript">var zxsyc5z1bwt29f;(function(d, t) {
+var s = d.createElement(t), options = {
+'userName':'jaydson',
+'formHash':'zxsyc5z1bwt29f',
+'autoResize':true,
+'height':'495',
+'async':true,
+'host':'wufoo.com',
+'header':'show',
+'ssl':true};
+s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+s.onload = s.onreadystatechange = function() {
+var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+try { zxsyc5z1bwt29f = new WufooForm();zxsyc5z1bwt29f.initialize(options);zxsyc5z1bwt29f.display(); } catch (e) {}};
+var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+})(document, 'script');</script>
+
 </article>
